improved handeling of multiple sources, changed args