@@ -3,11 +3,16 @@ package lvp;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 import java.util.regex.Matcher;
 
 import lvp.skills.logging.LogLevel;
 import lvp.skills.logging.Logger;
+import lvp.skills.parser.ConfigParser;
+import lvp.skills.parser.PathParser;
+import lvp.skills.parser.ConfigParser.Source;
 
 import java.net.URI;
 import java.net.http.HttpClient;
@@ -15,10 +20,11 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 
 public class Main {
-    private record Config(Path path, String fileNamePattern, int port, LogLevel logLevel){}
+    private record Config(List<Source> sources, int port, LogLevel logLevel, Optional<String> watchFilter, boolean sourceOnly){}
+
+    private static final Path LVP_CONFIG_PATH = Path.of("./sources.json");
     public static void main(String[] args) {
         Config cfg = parseArgs(args);
-        Logger.setLogLevel(cfg.logLevel());
 
         if (!isLatestRelease()) {
             System.out.println("Warning: You are not using the latest release of Live View Programming. Please visit https://github.com/denkspuren/LiveViewProgramming/releases");
@@ -28,11 +34,9 @@ public class Main {
             Server server = new Server(Math.abs(cfg.port()), cfg.logLevel().equals(LogLevel.Debug));
             Runtime.getRuntime().addShutdownHook(new Thread(server::stop));
             Processor processor = new Processor(server);
-            if(cfg.path() != null) {
-                FileWatcher watcher = new FileWatcher(cfg.path(), cfg.fileNamePattern(), processor);
-                Runtime.getRuntime().addShutdownHook(new Thread(watcher::stop));
-                watcher.watchLoop();
-            }
+            FileWatcher watcher = new FileWatcher(cfg.sources(), cfg.watchFilter(), cfg.sourceOnly(), processor);
+            Runtime.getRuntime().addShutdownHook(new Thread(watcher::stop));
+            watcher.start();
         } catch (IOException e) {
             System.err.println("Error starting lvp: " + e.getMessage());
             e.printStackTrace();
@@ -41,56 +45,82 @@ public class Main {
     }
 
     private static Config parseArgs(String[] args) {
-        String fileNamePattern = null;
-        Path fileName = null;
-        Path path = null;
+        List<String> files = new ArrayList<>();
+        Optional<String> cmd = Optional.empty();
         int port = Server.getDefaultPort();
         LogLevel logLevel = LogLevel.Error;
+        Optional<List<Source>> sources = Optional.empty();
+        Optional<String> watchFilter = Optional.empty();
+        boolean sourceOnly = false;
 
         for (String arg : args) {
             String[] parts = arg.split("=", 2);
-            String key = parts[0].trim();
-            String value = parts.length > 1 ? parts[1].trim() : "";
+            String key = parts[0].strip();
+            String value = parts.length > 1 ? parts[1].strip() : "";
 
             switch (key) {
                 case "-l", "--log":
                     logLevel = value.isBlank() ? LogLevel.Info : LogLevel.fromString(value);
                     break;
-                case "-p", "--pattern":
-                    fileNamePattern = value.isBlank() ? "*" : value;
+                case "--port", "-p":
+                    try { port = Integer.parseInt(value); } catch(NumberFormatException _) {}
                     break;
-                case "--watch", "-w":
-                    path = value.isBlank() ? Paths.get(".") : Paths.get(value).normalize();
+                case "--cmd":
+                    cmd = value.isBlank() ? Optional.empty() : Optional.of(value);
+                    break;
+                case "--config", "-c":
+                    sources = loadConfig();
+                    break;
+                case "--watch-filter", "-w":
+                    watchFilter = value.isBlank() ? Optional.empty() : Optional.of(value);
+                    break;
+                case "--source-only", "-s":
+                    sourceOnly = true;
                     break;
                 default:
-                    try { port = Integer.parseInt(arg.trim()); } catch(NumberFormatException _) {}
+                    if (!arg.isBlank()) files.add(arg.strip());
                     break;
             }
         }
+
+        Logger.setLogLevel(logLevel);
 
         if (port < 1 || port > 65535) {
             System.err.println("Error: Invalid port number. Must be between 1 and 65535.");
             System.exit(1);
         }
+        Logger.logDebug(files.isEmpty() ? "No files provided." : "Files to execute: " + files);
+        Optional<List<Path>> paths = getFilePaths(files);
 
-        if (path == null) return new Config(null, null, port, logLevel);
-
-        if (!Files.exists(path)) {
-            System.err.println("Error: Path not found " + path);
+        if (paths.isEmpty() && sources.isEmpty()) {
+            System.err.println("Error: No valid files to execute.");
             System.exit(1);
         }
 
-        if(!Files.isDirectory(path)) {
-            if (path.getFileName().toString().endsWith(".java")) fileName = path.getFileName();
-            path = path.getParent() != null ?  path.getParent() : Paths.get(".");
+        if (!paths.isEmpty()) {
+            sources = Optional.of(sources.orElseGet(ArrayList::new));
+            String c = cmd.orElse("java -Dsun.stdout.encoding=UTF-8 --enable-preview");
+            List<Source> sourcesFromPaths = paths.get().stream().map(path -> new Source(path, c)).toList();
+            sources.ifPresent(lst -> lst.addAll(sourcesFromPaths));
         }
 
-        if (fileName == null && fileNamePattern == null) {
-            System.err.println("Error: No Java file or pattern specified.");
-            System.exit(1);
-        }
+        return new Config(sources.get(), port, logLevel, watchFilter, sourceOnly);
+    }
 
-        return new Config(path, fileNamePattern != null ? fileNamePattern : fileName.toString(), port, logLevel);
+    private static Optional<List<Path>> getFilePaths(List<String> files) {
+        List<Path> paths = new ArrayList<>();
+        for (String file : files) {
+            PathParser.parse(file).ifPresent(paths::addAll);
+        }
+        return paths.isEmpty() ? Optional.empty() : Optional.of(paths);
+    }
+
+    private static Optional<List<Source>> loadConfig() {
+        if (!Files.isRegularFile(LVP_CONFIG_PATH) || !Files.exists(LVP_CONFIG_PATH)) {
+            Logger.logError("Config not found at: " + LVP_CONFIG_PATH.normalize().toAbsolutePath());
+            return Optional.empty();
+        }
+        return ConfigParser.parse(LVP_CONFIG_PATH);
     }
 
     public static boolean isLatestRelease() {
@@ -116,7 +146,7 @@ public class Main {
         }
     }
 
-    public static String extractJsonField(String json, String field) {
+    private static String extractJsonField(String json, String field) {
         Matcher matcher = java.util.regex.Pattern
             .compile("\"" + field + "\"\\s*:\\s*\"([^\"]+)\"")
             .matcher(json);
